--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,6 @@
 {
   "version": "0.0.0",
+  "license": "ISC",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -25,7 +26,6 @@
     "autoprefixer": "^10.2.6",
     "eslint": "^7.29.0",
     "eslint-config-alloy": "^4.1.0",
-    "husky": "4.3.8",
     "lint-staged": "^11.0.0",
     "postcss": "^8.3.5",
     "prettier": "^2.3.2",
@@ -33,11 +33,6 @@
     "typescript": "^4.3.2",
     "vite": "^2.3.8",
     "vite-tsconfig-paths": "^3.3.13"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
   },
   "lint-staged": {
     "src/**/*.{ts,tsx}": [
