--- a/client/package.json
+++ b/client/package.json
@@ -10,18 +10,25 @@
     "@heroicons/react": "^1.0.1",
     "@loadable/component": "^5.15.0",
     "@types/loadable__component": "^5.13.3",
+    "axios": "^0.24.0",
+    "mobx": "^6.3.8",
+    "mobx-react": "^7.2.1",
+    "qrcode.react": "^1.0.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-redux": "^7.2.4",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.2.0",
-    "redux": "^4.1.0"
+    "redux": "^4.1.0",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "@types/qrcode.react": "^1.0.2",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-config": "^5.0.2",
     "@types/react-router-dom": "^5.1.7",
+    "@types/styled-components": "^5.1.17",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "autoprefixer": "^10.2.6",
     "eslint": "^7.29.0",
