--- a/client/package.json
+++ b/client/package.json
@@ -7,8 +7,11 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
     "@heroicons/react": "^1.0.1",
     "@loadable/component": "^5.15.0",
+    "@mui/material": "^5.2.3",
     "@types/loadable__component": "^5.13.3",
     "axios": "^0.24.0",
     "mobx": "^6.3.8",
