--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "@types/node": "^16.11.12",
     "@types/qrcode.react": "^1.0.2",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
