--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.2.3",
     "@types/loadable__component": "^5.13.3",
     "axios": "^0.24.0",
+    "http-proxy-middleware": "^2.0.1",
     "mobx": "^6.3.8",
     "mobx-react": "^7.2.1",
     "qrcode.react": "^1.0.1",
